--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Misosial</title>
+    <title>Misocial</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container" style="height:100%">
+        <div class="header__container">
+          <div class="header__top">
+            <a class="header__logo logo"
+              ><img src="./assets/home/Symbol.svg" />
+              <span class="logo__title">Misocial</span></a
+            >
+
+            <nav class="nav header__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link nav__link--active" href="#">Home</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">Why Misocial</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">Features</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">Articles</a>
+                </li>
+                <li class="nav__item">
+                  <a class="nav__link" href="#">Pricing</a>
+                </li>
+              </ul>
+              <a href="#" class="btn btn--outline header__btn">Get started</a>
+            </nav>
+          </div>
+          <div class="header__content">
+            <p class="header__pre-title">— Social marketing & Analytics</p>
+            <h1 class="header__title">Take control of your data</h1>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
+              omnis vero, quae in expedita dolore?
+            </p>
+            <div class="header__buttons">
+              <a href="#" class="btn btn--color header__button">Get started</a>
+              <a href="#" class="btn btn--white header__button"
+                >Explore features</a
+              >
+            </div>
+            <a href="#"><i class="fas fa-arrow-down"></i></a>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
