--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container" style="height:100%">
+      <div class="container">
         <div class="header__container">
           <div class="header__top">
             <a class="header__logo logo"
@@ -17,7 +17,10 @@
             >
 
             <nav class="nav header__nav">
-              <ul class="nav__list">
+              <div class="nav-icon" id="mainNavIcon">
+                <div></div>
+              </div>
+              <ul class="nav__list collapsed-menu" id="mainCollapsedMenu">
                 <li class="nav__item">
                   <a class="nav__link nav__link--active" href="#">Home</a>
                 </li>
@@ -38,7 +41,7 @@
             </nav>
           </div>
           <div class="header__content">
-            <p class="header__pre-title">— Social marketing & Analytics</p>
+            <p class="pre-title">— Social marketing & Analytics</p>
             <h1 class="header__title">Take control of your data</h1>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe
@@ -50,10 +53,26 @@
                 >Explore features</a
               >
             </div>
-            <a href="#"><i class="fas fa-arrow-down"></i></a>
           </div>
         </div>
+        <a href="#" class="btn-scroll"><i class="fas fa-arrow-down"></i></a>
       </div>
     </header>
+    <section class="section why-choose-us">
+      <div class="container why-choose-us__container">
+        <div class="section__text-column why-choose-us__text-column">
+          <p class="pre-title">— Why choose us</p>
+          <h3>All your data collected in one place</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
+            error, sunt provident corporis quis sit repellendus mollitia aut
+            architecto, iure ut odit eos facere qui ex quibusdam quo optio autem
+            obcaecati voluptatibus velit minima sapiente? Mollitia illum nihil
+            ipsum, obcaecati perspiciatis voluptas sapiente molestias minus,
+            ipsam, fugiat impedit aliquam! Eius!
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
