dodano summer collection and our brands

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,8 @@
             <img src="./assets/img/shoes.jpg" alt="shoes" />
             <div class="section__frame">
               <div class="section__frame-outside">
-                <div class="section__frame-inside">
+                <div class="section__frame-inside"></div>
+                <div class="section__product-content">
                   <span class="section__frame-plus">+</span>
                   <a href="" class="btn section__frame-btn">Buy now</a>
                 </div>
@@ -154,16 +155,184 @@
           </div>
           <div class="section__grid-element section__grid-element--model">
             <img src="./assets/img/model.jpg" alt="model" />
+            <div class="section__frame">
+              <div class="section__frame-outside">
+                <p
+                  class="section__product-discount section__product-discount--name-collection"
+                >
+                  <span class="uppercase">Parris</span> Hilton<br /><span
+                    class="section__product-collection"
+                    >Collection</span
+                  >
+                </p>
+                <div class="section__frame-inside"></div>
+                <div class="section__product-content">
+                  <span class="section__frame-plus">+</span>
+                  <a href="#" class="btn section__frame-btn">Buy now</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="section__grid-element section__grid-element--jewerelly1">
             <img src="./assets/img/jewerelly.jpg" alt="jewerelly" />
+            <div class="section__frame">
+              <div class="section__frame-outside">
+                <p
+                  class="section__product-discount section__product-discount--important"
+                >
+                  50%<br />off
+                </p>
+                <div class="section__frame-inside"></div>
+                <div class="section__product-content">
+                  <span class="section__frame-plus">+</span>
+                  <a href="" class="btn section__frame-btn">Buy now</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="section__grid-element section__grid-element--jewerelly2">
             <img src="./assets/img/jewerelly2.jpg" alt="jewerelly" />
+            <div class="section__frame">
+              <div class="section__frame-outside">
+                <div class="section__frame-inside"></div>
+                <p class="section__product-discount">
+                  Discount 30%<br /><span>jewellery product</span>
+                </p>
+                <div class="section__product-content">
+                  <span class="section__frame-plus">+</span>
+                  <a href="" class="btn section__frame-btn">Buy now</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="section__grid-element section__grid-element--wallet">
             <img src="./assets/img/wallet.jpg" alt="wallet" />
+            <div class="section__frame">
+              <div class="section__frame-outside">
+                <div class="section__frame-inside"></div>
+                <div class="section__product-content">
+                  <span class="section__frame-plus">+</span>
+                  <a href="" class="btn section__frame-btn">Buy now</a>
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section class="section summer-collection">
+      <div class="container">
+        <div class="section__title">
+          <div class="section__title-line"></div>
+          <div class="square square--golden"></div>
+          <h2 class="section__title-heading">Summer Collection</h2>
+          <div class="square square--golden"></div>
+          <div class="section__title-line"></div>
+        </div>
+        <div class="summer-collection__grid-wrapper">
+          <div class="product-box">
+            <img src="./assets/img/product8.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__discount">20<span> %</span></div>
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product7.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product6.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product5.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__discount">40<span> %</span></div>
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product4.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__discount">20<span> %</span></div>
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product3.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product2.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+          <div class="product-box">
+            <img src="./assets/img/product1.jpg" alt="jacket" />
+            <div class="product-box__overlay"></div>
+            <div class="product-box__content">
+              <div class="product-box__discount">40<span> %</span></div>
+              <div class="product-box__btn">+ Add to Cart</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section brands">
+      <div class="container">
+        <div class="section__title">
+          <div class="section__title-line"></div>
+          <div class="square square--golden"></div>
+          <h2 class="section__title-heading">Our brand</h2>
+          <div class="square square--golden"></div>
+          <div class="section__title-line"></div>
+        </div>
+        <div class="brands__wrapper">
+          <img
+            class="brands__logo"
+            src="./assets/img/brand1.svg"
+            alt="bakery"
+          />
+          <img
+            class="brands__logo"
+            src="./assets/img/brand2.svg"
+            alt="caralier"
+          />
+          <img
+            class="brands__logo"
+            src="./assets/img/brand3.svg"
+            alt="bakery"
+          />
+          <img
+            class="brands__logo"
+            src="./assets/img/brand4.svg"
+            alt="bakery"
+          />
+          <img
+            class="brands__logo"
+            src="./assets/img/brand5.svg"
+            alt="bakery"
+          />
+          <img
+            class="brands__logo"
+            src="./assets/img/brand6.svg"
+            alt="bakery"
+          />
         </div>
       </div>
     </section>
