--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="slider">
-        <div class="slider__triangle"></div>
+        <div class="triangle"></div>
         <div class="slider__content">
           <div class="slider__box">
             <h2 class="slider__title">Mid Season</h2>
@@ -333,6 +333,57 @@
             src="./assets/img/brand6.svg"
             alt="bakery"
           />
+        </div>
+      </div>
+    </section>
+    <section class="section testimonials">
+      <div class="container">
+        <div class="section__title">
+          <div class="section__title-line"></div>
+          <div class="square square--golden"></div>
+          <h2 class="section__title-heading">Customer says</h2>
+          <div class="square square--golden"></div>
+          <div class="section__title-line"></div>
+        </div>
+      </div>
+
+      <div class="testimonials__bg">
+        <div class="triangle"></div>
+        <div class="container testimonials__wrapper">
+          <article class="testimonial">
+            <div class="testimonial__wrapper">
+              <div class="testimonial__header">
+                <h3 class="testimonial__name">Sanra Devi</h3>
+                <p>Fashion stylish</p>
+              </div>
+              <p class="testimonial__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio voluptatem minima, tenetur cumque suscipit minus!
+              </p>
+            </div>
+            <img
+              class="testimonial__img testimonial__img--reverse"
+              src="./assets/img/testimonial1.png"
+              alt="sandra devi"
+            />
+          </article>
+          <article class="testimonial">
+            <div class="testimonial__wrapper testimonial__wrapper--to-right">
+              <div class="testimonial__header">
+                <h3 class="testimonial__name">Shaaheer Sheikh</h3>
+                <p>Designer</p>
+              </div>
+              <p class="testimonial__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio voluptatem minima, tenetur cumque suscipit minus!
+              </p>
+            </div>
+            <img
+              class="testimonial__img"
+              src="./assets/img/testimonial2.png"
+              alt="Shaaheer Sheikh"
+            />
+          </article>
         </div>
       </div>
     </section>
