--- a/src/index.html
+++ b/src/index.html
@@ -387,5 +387,149 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <!-- <div class="footer__wrapper"> -->
+      <div class="container footer__wrapper">
+        <section class="footer__section">
+          <h3 class="footer__section-title">Shops</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link" href="#">New in</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Woman</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Men</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Shoes</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Bags & Accesories</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Top Brands</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Sale & Special Offers</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">LookBook</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__section">
+          <h3 class="footer__section-title">Information</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link" href="#">About us</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Customer Serviece</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">New Collection</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Bestsellers</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Manufacturers</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Privacy policy</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Terms % Condition</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Blog</a>
+            </li>
+          </ul>
+        </section>
+        <section class="footer__section">
+          <h3 class="footer__section-title">Customer Serviece</h3>
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a class="footer__link" href="#">Search Terms</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Advanced Search</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Orders and returns</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Contact us</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">RSS</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Help & FAQs</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Consultant</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#">Store Locations</a>
+            </li>
+          </ul>
+        </section>
+        <div>
+          <section class="footer__section">
+            <h3 class="footer__section-title">Stay connected</h3>
+            <ul class="footer__icon-list">
+              <li class="footer__icon-item">
+                <a class="footer__icon-circle" href="#"
+                  ><i class="fab fa-facebook-f footer__icon"></i
+                ></a>
+              </li>
+              <li class="footer__icon-item">
+                <a class="footer__icon-circle" href="#"
+                  ><i class="fab fa-twitter footer__icon"></i
+                ></a>
+              </li>
+              <li class="footer__icon-item">
+                <a class="footer__icon-circle" href="#"
+                  ><i class="fab fa-instagram footer__icon"></i
+                ></a>
+              </li>
+              <li class="footer__icon-item">
+                <a class="footer__icon-circle" href="#"
+                  ><i class="fab fa-pinterest footer__icon"></i
+                ></a>
+              </li>
+              <li class="footer__icon-item">
+                <a class="footer__icon-circle" href="#"
+                  ><i class="fab fa-google-plus-g footer__icon"></i
+                ></a>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3
+              class="footer__section-title footer__section-title--word-spacing footer__section-title--spacing-top"
+            >
+              Subscribe <span class="italic"> in </span>our news letter
+            </h3>
+            <form action="" class="footer__form">
+              <label for="email" class="visually-hidden"
+                >Enter your email address</label
+              >
+              <input
+                placeholder="Enter your email address"
+                class="footer__input"
+                type="email"
+                id="email"
+              />
+              <button class="footer__btn">Subscribe</button>
+            </form>
+          </section>
+        </div>
+      </div>
+      <!-- </div> -->
+    </footer>
   </body>
 </html>
