dodano efekt fixed na hamburger menu, fixed resp.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <div class="header-top">
-        <div class="container">
+        <div class="container header-top__wrapper">
           <a href="tel:123456789"
             ><i class="fas fa-phone-alt"></i> Call +123456 789</a
           >
@@ -29,45 +29,47 @@
           </ul>
         </div>
       </div>
-      <div class="header-middle">
-        <div class="container">
-          <div class="header-middle__content">
-            <nav class="nav">
-              <div class="nav-icon" id="mainNavIcon">
-                <div></div>
-              </div>
-              <ul class="nav__list collapsed-menu" id="mainCollapsedMenu">
-                <li class="nav__item">
-                  <a class="nav__link" href="#">Home</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#">Gallery</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#">Categories</a>
-                </li>
-                <li class="nav__item">
-                  <a class="nav__link" href="#">Pages</a>
-                </li>
-              </ul>
-            </nav>
-            <h1 class="logo header-middle__logo">Shophia</h1>
-            <aside>
-              <ul class="header-middle__list">
-                <li><a class="header-middle__link" href="#"></a></li>
-                <li><a class="header-middle__link" href="#"></a></li>
-                <li><a class="header-middle__link" href="#"></a></li>
-                <li><a class="header-middle__link" href="#"></a></li>
-              </ul>
-            </aside>
-            <button class="btn-currency">
-              Rupiah
-              <ul class="btn-currency__dropdown hide">
-                <li class=""><a href="#">Zloty</a></li>
-                <li><a href="#">Pound</a></li>
-                <li><a href="#">Dollar</a></li>
-              </ul>
-            </button>
+      <div class="header-middle" id="headerMiddle">
+        <div class="header-middle__wrapper">
+          <div class="container">
+            <div class="header-middle__content">
+              <nav class="nav">
+                <div class="nav-icon" id="mainNavIcon">
+                  <div></div>
+                </div>
+                <ul class="nav__list collapsed-menu" id="mainCollapsedMenu">
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Home</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Gallery</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Categories</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#">Pages</a>
+                  </li>
+                </ul>
+              </nav>
+              <h1 class="logo header-middle__logo">Shophia</h1>
+              <aside>
+                <ul class="header-middle__list">
+                  <li><a class="header-middle__link" href="#"></a></li>
+                  <li><a class="header-middle__link" href="#"></a></li>
+                  <li><a class="header-middle__link" href="#"></a></li>
+                  <li><a class="header-middle__link" href="#"></a></li>
+                </ul>
+              </aside>
+              <button class="btn-currency">
+                Rupiah
+                <ul class="btn-currency__dropdown hide">
+                  <li class=""><a href="#">Zloty</a></li>
+                  <li><a href="#">Pound</a></li>
+                  <li><a href="#">Dollar</a></li>
+                </ul>
+              </button>
+            </div>
           </div>
         </div>
       </div>
@@ -531,5 +533,6 @@
       </div>
       <!-- </div> -->
     </footer>
+    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
