poprawienie wyświetlania fontów

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,8 @@
                 </ul>
               </aside>
               <button class="btn-currency">
-                Rupiah
+                <span class="btn-currency__text">Rupiah</span>
+                <i class="fas fa-coins btn-currency__icon"></i>
                 <ul class="btn-currency__dropdown hide">
                   <li class=""><a href="#">Zloty</a></li>
                   <li><a href="#">Pound</a></li>
