--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,14 @@
         </div>
       </div>
       <div class="slider">
+        <div
+          class="slider__image slider__image--first slider__image--active"
+          id="slide1"
+        ></div>
+        <div class="slider__image slider__image--second" id="slide2"></div>
+        <div class="slider__image slider__image--third" id="slide3"></div>
+        <div class="slider__image slider__image--fourth" id="slide4"></div>
+
         <div class="triangle"></div>
         <div class="slider__content">
           <div class="slider__box">
