dodanie obsługi controls w sliderze

--- a/src/index.html
+++ b/src/index.html
@@ -108,10 +108,10 @@
         </div>
         <a class="btn">Shop now</a>
         <div class="slider__controls">
-          <div class="square slider__control slider__control--active"></div>
-          <div class="square slider__control"></div>
-          <div class="square slider__control"></div>
-          <div class="square slider__control"></div>
+          <div class="square slider__control slider__control--active" id="control1"></div>
+          <div class="square slider__control" id="control2"></div>
+          <div class="square slider__control" id="control3"></div>
+          <div class="square slider__control"id="control4"></div>
         </div>
       </div>
     </header>
