poprawiono responsywność w sekcji hand picked

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,19 @@
                   <li class="nav__item">
                     <a class="nav__link" href="#">Pages</a>
                   </li>
+                  <hr class="simple-line">
+                  <li class="header-top__item">
+                    <a class="header-top__link" href="">Welcome msg</a>
+                  </li>
+                  <li class="header-top__item">
+                    <a class="header-top__link" href="">My account</a>
+                  </li>
+                  <li class="header-top__item">
+                    <a class="header-top__link" href="">My whislist</a>
+                  </li>
+                  <li class="header-top__item">
+                    <a class="header-top__link" href="">Login</a>
+                  </li>
                 </ul>
               </nav>
               <h1 class="logo header-middle__logo">Shophia</h1>
